# sonoforge

./: .gitignore  404.html  CITATION.cff  Dockerfile  How-To-Run-Commands.txt  LICENSE  PLANNING.md  README.md  RUN.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
EXPLAINER/: index.html
PLAN/: index.html
RESULTS/: index.html
WHITEPAPER/: index.html
benchmarks/: benchmark_optimizers.py  results.csv
cards/dataset_card/: index.html
cards/model_card/: index.html
docs/: EXPLAINER.md  PLAN.md  RESULTS.md  WHITEPAPER.md  index.md
docs/cards/: dataset_card.md  model_card.md
scripts/: download_data.py  run_cycle.py
search/: search_index.json
src/sonoforge/: __init__.py  benchmark.py
src/sonoforge/data/: __init__.py  dataset.py  featurize.py  fetch.py  types.py
src/sonoforge/generative/: __init__.py  egnn.py  flow.py  frames.py  jax_egnn.py  train.py
src/sonoforge/loop/: __init__.py  dbtl.py
src/sonoforge/optimize/: __init__.py  base.py  gflownet.py  nsga2.py  pareto.py  preference.py  qnehvi.py  random_baseline.py  uq.py  variation.py
src/sonoforge/oracle/: __init__.py  base.py  signals.py  stack.py
src/sonoforge/physics/: __init__.py  elastic_network.py
src/sonoforge/plm/: __init__.py  model.py  scorer.py  ssm.py  tokenizer.py  train.py
src/sonoforge/serve/: __init__.py  api.py  app.py  dashboard.py  service.py
src/sonoforge/utils/: __init__.py  common.py
tests/: test_phase0_scaffold.py  test_phase1_data.py  test_phase2_plm.py  test_phase3_generative.py  test_phase4_oracle.py  test_phase5_optimize.py  test_phase5b_gflownet.py  test_phase6_serve.py
