[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonoforge"
version = "0.1.0"
description = "Closed-loop DBTL optimization backbone for de novo design of ultrasound-coupling neural biomolecules (gas-vesicle acoustic reporter genes)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dr. Sanjay Anbu" }]
keywords = ["de-novo-design", "protein-design", "flow-matching", "bayesian-optimization", "gas-vesicles", "acoustic-reporter-genes", "brain-computer-interface", "molecular-dynamics"]

dependencies = [
  "numpy>=1.26,<2.0",
  "scipy>=1.11",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "biotite>=0.39",
  "biopython>=1.83",
  "tqdm>=4.66",
  "requests>=2.31",
  "rich>=13.7",
]

[project.optional-dependencies]
# Heavy / GPU-oriented extras. The core loop and tests run without these
# via lightweight fallbacks (see docs/PLAN.md).
ml = [
  "torch>=2.1",
  "fair-esm>=2.0",
  "botorch>=0.9",
  "gpytorch>=1.11",
]
physics = ["openmm>=8.1", "pdbfixer>=1.9"]
serve = ["streamlit>=1.30", "gradio>=4.0", "plotly>=5.18", "py3Dmol>=2.0", "fastapi>=0.110", "uvicorn>=0.29"]
track = ["mlflow>=2.9"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1.11",
  "black>=23.12",
  "pre-commit>=3.6",
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/sanjaydoc/sonoforge"
Documentation = "https://sanjaydoc.github.io/sonoforge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
